# franken_markdown

./: .gitattributes  .gitignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  CHANGELOG_RESEARCH.md  COMPREHENSIVE_PLAN_FOR_FRANKEN_MARKDOWN.md  Cargo.toml  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  REALITY_CHECK_BRIDGE_PLAN.md  TODO_LATEX_PDF_RENDERING.md  install.ps1  install.sh
.beads/: .gitignore  beads.base.jsonl  issues.jsonl
.beads/.br_history/: issues.20260723_191947_705963357.jsonl  issues.20260724_042823_277298949.jsonl  issues.20260724_042831_695481101.jsonl  issues.20260724_050103_860773070.jsonl  issues.20260724_050111_264457698.jsonl  issues.20260724_053455_669879031.jsonl
.github/workflows/: ci.yml  release-wasm.yml  release.yml
data/: hyph-en-us.README.md
docs/: BATCH_ORCHESTRATION.md  BATCH_WORKER_BUDGET.md  MICROTYPOGRAPHY.md  OPTIMIZATION_PROOF_CHECKLIST.md  PDF_ACCESSIBILITY.md  PERFORMANCE_ACCELERATION_PLAN.md  PERFORMANCE_ARTIFACT_SCHEMA.md  RELEASE_READINESS.md  SIMD_ISLAND_DESIGN.md  TESTING.md
docs/specs/: 2026-07-21-uax14-line-break-design.md
examples/: fmd_layout_perf.rs  fmd_parser_perf.rs  fmd_perf_harness.rs  gen_symbol_fallback_font.rs  showcase-frankenmermaid.toml  showcase-mermaid.mmd  showcase.md
fmd-font/: Cargo.toml
fmd-font/src/: bundled.rs  lib.rs  outline.rs
fmd-font/tests/: outline_test.rs
fmd-math/: Cargo.toml
fmd-math/examples/: layout_dump.rs  span_probe.rs
fmd-math/src/: atom.rs  commands.rs  drawn.rs  error.rs  faces.rs  layout.rs  lib.rs  macros.rs  mbox.rs  metrics.rs  node.rs  parse.rs  paths.rs  spanmap.rs  style.rs  token.rs
fmd-math/tests/: atom_classification.rs  chaos.rs  corpus_goldens.rs  extensions.rs  layout_determinism.rs  layout_goldens.rs  parse_constructs.rs  placement_params.rs  spacing_table.rs  span_maps.rs  style_propagation.rs
fmd-math/tests/goldens/: accents.txt  alphabets.txt  binom.txt  corpus_head_ddx.txt  corpus_head_eq.txt  corpus_head_plus.txt  euler.txt  integral.txt  left_right_fraction.txt  nested_display_fraction.txt  over_idiom.txt  overline_underline.txt  radical_with_degree.txt  simultaneous_scripts.txt  stackrel.txt  sum_limits_display.txt  sum_limits_text.txt
fonts/: README.md
scripts/: batch-throughput.sh  check-claim-discipline.sh  check-determinism.sh  check-optimization-proof.sh  check-pdf-ua.sh  check-policy.sh  check-test-doubles.sh  check-wasm-core.sh  check-wasm-package.sh  claims.tsv  cli-output-contract.sh  commonmark-conformance.sh  coverage.sh  highlight-proof.sh  layout-perf-proof.sh  mutation.sh  pagination-proof.sh  parser-diff.sh  parser-perf.sh  pdf-perf-proof.sh  perf-compare.sh  perf-counters.sh  perf-gauntlet.sh  release-smoke.sh  test-all.sh  theme-proof.sh  validate-run-id.sh  verify-showcase-mermaid.sh
scripts/e2e/: cli-surface.sh  error-paths.sh  installer.sh  lib.sh  render-matrix.sh  run-all.sh
src/: ast.rs  batch.rs  cli.rs  compress.rs  config.rs  error.rs  file_write.rs  fonts.rs  highlight.rs  html.rs  layout.rs  lib.rs  line_break.rs  main.rs  pdf.rs  scanner.rs  span.rs  text.rs  theme.rs  wasm.rs  wasm_abi.rs
src/parse/: entities.rs  mod.rs  unicode_punct.rs
tests/: cjk_line_break_test.rs  cli_contract.rs  cli_coverage_test.rs  config_test.rs  corpus_soak.rs  coverage_misc_test.rs  error_test.rs  font_test.rs  fonts_test.rs  golden_output.rs  highlight_test.rs  installer_behavior_test.rs  installer_sources_test.rs  kern_test.rs  layout_test.rs  lib_api_test.rs  lig_test.rs  parse_coverage_test.rs  parser_conformance.rs  parser_differential.rs  parser_fuzz.rs  parser_metamorphic.rs  parser_spans.rs  pdf_branch_high_test.rs  pdf_branch_low2_test.rs  pdf_branch_low_test.rs  pdf_coverage_test.rs  pdf_embed_test.rs  pdf_test.rs  remote_image_test.rs  scanner_test.rs  script_sources_test.rs  security_test.rs  smoke_test.rs  span_test.rs  symbol_fallback_test.rs  theme_test.rs  wasm_abi_test.rs  wasm_api_test.rs  wasm_package_test.rs
tests/artifacts/coverage/: baseline.md  baseline.tsv
tests/artifacts/perf/20260627T110831Z-a1455bb/: BASELINE.md  DEFINE.md  README.md  fingerprint.json  golden_checksums.txt  hotspot_table.md  hyperfine.json  hyperfine.txt  inprocess.jsonl  perf-smoke.stderr  perf-stat.stderr  perf-stat.stdout  time.stderr
tests/artifacts/perf/20260627T111155Z-qw1.3-prefix/: BASELINE.md  README.md  fingerprint.json  hotspot_table.md  hyperfine.json  hyperfine.txt  hypothesis.md  inprocess.jsonl  perf-smoke.stderr  perf-stat.stderr  perf-stat.stdout  time.stderr  tuning.json
tests/artifacts/perf/20260627T111720Z-qw1.4-trie/: BASELINE.md  README.md  fingerprint.json  golden_checksums.txt  hotspot_table.md  hyperfine.json  hyperfine.txt  inprocess.jsonl  perf-smoke.stderr  perf-smoke.stdout  perf-stat.stderr  perf-stat.stdout  scaling_law.md  time.stderr
tests/artifacts/perf/optloop-20260705T162726Z/: BASELINE.md  DEFINE.md  README.md  (+11 more)
tests/fixtures/commonmark/: README.md  conformance-summary.md
tests/fixtures/coverage/: coverage-floor.txt
tests/fixtures/highlight/: css.code  css.tokens  html.code  html.tokens  markdown.code  markdown.tokens  rust.code  rust.tokens  unknown.tokens
tests/fixtures/html/: preview.article.html  preview.md
tests/fixtures/mutation/: survivors.txt
tests/fixtures/optimization_proof/: missing_after_p95.md  placeholder_short_description.md  valid.md  valid_with_angle_text.md
tests/fixtures/parser/: core_blocks.article.html  core_blocks.md  inline_edges.article.html  inline_edges.md  references_lists.article.html  references_lists.md  scanner_edges.article.html  scanner_edges.md
tests/golden/output/: code.html.snapshot  code.pdf.snapshot  lists.html.snapshot  lists.pdf.snapshot  prose.html.snapshot  prose.pdf.snapshot  quote-and-rule.html.snapshot  quote-and-rule.pdf.snapshot  table.html.snapshot  table.pdf.snapshot
tests/golden/render_tree/: hyphenation.txt  lists.txt  performance-plan.txt  prose.txt  quote-code.txt  table.txt
wasm/: DEPENDENCIES.md  README.md  franken_markdown.d.ts  franken_markdown.js  package.json  smoke.mjs
wasm/demo/: demo.js  index.html
(+82 files in other folders)
