# franken_markdown — pure-Rust, dependency-lean, ultra-fast Markdown renderer.
#
# Philosophy (see COMPREHENSIVE_PLAN_FOR_FRANKEN_MARKDOWN.md and AGENTS.md):
#   * The ENGINE (the library) has ZERO third-party dependencies — pure std.
#     Our own focused Markdown parser, HTML emitter, text/font subsystem, layout
#     engine, and PDF writer. No comrak / pulldown-cmark / syntect / cosmic-text
#     / krilla / typst / blitz, and therefore none of the hundreds of transitive
#     crates they drag in (smaller attack surface, instant builds, full control).
#   * Only the CLI surface pulls a tiny, audited commodity crate (`clap`), behind
#     the default `cli` feature. A `--no-default-features` build (e.g. the wasm
#     target) compiles the engine with no external crates at all.
#   * `asupersync` is the orchestration/cancellation/budget foundation for batch
#     and streaming renders, added by its owning bead (kept out of the v0 hot
#     path so the core stays trivially auditable).
# The workspace: the root package plus the factored `fmd-font` crate (the
# font subsystem, split out so the wider Franken suite can consume it
# directly — franken_manim's fm-ydw is the factoring bead). default-members
# keeps plain `cargo test`/`check` in the root covering both crates, so the
# AGENTS.md verification gate still sees the whole tree.
[workspace]
members = [".", "fmd-font"]
default-members = [".", "fmd-font"]

[package]
name = "franken_markdown"
version = "0.3.4"
edition = "2024"
rust-version = "1.85"
default-run = "fmd"
license-file = "LICENSE"
description = "Pure-Rust, dependency-lean, ultra-fast Markdown -> beautiful all-in-one HTML & tiny optimized PDF (library + single-binary CLI: fmd)"
readme = "README.md"
repository = "https://github.com/Dicklesworthstone/franken_markdown"
homepage = "https://github.com/Dicklesworthstone/franken_markdown"
keywords = ["markdown", "pdf", "html", "renderer", "typesetting"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Jeffrey Emanuel"]
exclude = [
    ".beads/**",
    ".skill-loop-progress.md",
    "Cargo.toml.orig",
    "librust_out.rlib",
    "/.beads/**",
    "/.skill-loop-progress.md",
    "/Cargo.toml.orig",
    "/librust_out.rlib",
    "franken_markdown_illustration.png",
    "/franken_markdown_illustration.png",
    "/tests/artifacts",
    "/tests/artifacts/",
    "/tests/artifacts/*",
    "tests/artifacts/**",
    "/tests/artifacts/**",
]

[lib]
name = "franken_markdown"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

# Two binaries from one shared entrypoint (`cli::main`), each from its own thin
# shim so no source file is shared across build targets. The long name builds
# from src/main.rs; the short `fmd` alias — what agents and humans actually type
# — builds from src/bin/fmd.rs.
[[bin]]
name = "franken_markdown"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "fmd"
path = "src/bin/fmd.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# CLI surface only. The engine library never depends on these.
cli = ["dep:clap"]
# Browser package adapter only. The no-default core stays dependency-free; this
# feature exists because Rust 2024 treats manual `no_mangle`/`export_name` ABI
# exports as unsafe attributes, and the project forbids unsafe code.
wasm-bindgen = ["dep:wasm-bindgen"]
# Native-only batch/streaming orchestration (bead zmd). Pulls Asupersync for
# structured concurrency, cancellation, and budgets. Strictly opt-in: the
# library core, `--no-default-features`, and wasm32 builds never enable it, so
# the render engine stays dependency-free and `scripts/check-wasm-core.sh`
# remains green. See docs/BATCH_ORCHESTRATION.md.
batch = ["cli", "dep:asupersync"]

[dependencies]
# First-party: the factored font subsystem (this repo's own workspace crate;
# zero third-party dependencies of its own). `crate::text` re-exports it, so
# the engine surface is unchanged.
fmd-font = { path = "fmd-font", version = "0.1.0" }
# The ONLY third-party crate in the default build, and only for the CLI argument
# parser. The library target (the renderer itself) compiles with zero external
# dependencies.
clap = { version = "4.5", features = ["derive", "env"], optional = true }
wasm-bindgen = { version = "0.2.126", optional = true }
# Native-only, opt-in via the `batch` feature. Justification: the project's own
# orchestration framework (the Franken suite), used solely for the native batch
# renderer's structured concurrency / cancellation / budget semantics; it never
# enters the render core or any wasm/no-default build. Use the published crate,
# not a moving git checkout, so default installs and release builds do not fetch
# unrelated repository fixtures before compiling `fmd`.
asupersync = { version = "0.3.5", optional = true }

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

# Size- and speed-optimized release: tiny binaries, tiny PDFs, max throughput.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Profiling build: keep symbols/frame pointers so samplers can attribute frames.
# NEVER profile the size-stripped `release` profile.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false
panic = "unwind"
